# pytranslate2

./: .gitignore  README.md  pyproject.toml
pytranslate2/: split.py  translate.py
pytranslate2/constants/: commands.py  extensions.py
pytranslate2/definition/: get.py
pytranslate2/file/: read.py
tests/: test_split.py
