[tool.poetry]
name = "pytranslate2"
version = "0.1.0"
description = ""
authors = ["Ivan Dustin Bilon <ivan22.dust@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyopenaichat = {git = "https://github.com/ivandustin/pyopenaichat.git"}
pydefine = {git = "https://github.com/ivandustin/pydefine.git"}
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
